# template

./: README.md  pyproject.toml
template/: template.py
template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
